--- a/homework3.tex
+++ b/homework3.tex
@@ -39,7 +39,7 @@
     \textsc{\LARGE Classical Parts/Field/Matter III}\\[1.5cm]
 
     \HRule \\[0.5cm]
-    { \huge \bfseries Homework XXXX}\\[0.4cm] 
+    { \huge \bfseries Homework Three}\\[0.4cm] 
     \HRule \\[1.0cm]
 
     \textbf{Behnam Amiri}
