--- a/homework3.tex
+++ b/homework3.tex
@@ -57,7 +57,94 @@
   \end{titlepage}
 
   \begin{enumerate}
-    \item Start here 
+    \item \textbf{9.8 (30 points)} Equation $9.36$ describes the most general \textbf{linearly} polarized wave on a string. 
+    Linear (or “plane”) polarization (so called because the displacement is parallel to a fixed vector $\hat{n}$) results
+    from the combination of horizontally and vertically polarized waves of the \emph{same phase} (Eq. $9.39$). If the two 
+    components are of equal amplitude, but out of phase by $90^{\circ}$ (say, $\delta_v=0$, $\delta_h=90^{\circ}$), the result is a circularly
+    polarized wave. In that case:
+    \begin{enumerate}
+      \item At a fixed point $z$, show that the string moves in a circle about the $z$ axis. Does it go \emph{clockwise} or 
+      \emph{counterclockwise}, as you look down the axis toward the origin? How would you construct a wave circling the 
+      other way? (In optics, the clockwise case is called \textbf{right circular polarization}, and the counterclockwise, \textbf{left
+      circular polarization}.)
+      \\
+      \emph{An elegant notation for circular polarization (or elliptical, if the amplitudes are unequal) is to use a
+      complex $\hat{n}$, but I shall not do so in this book.}
+
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+      \item Sketch the string at time $t = 0$.
+      
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+
+      \item How would you shake the string in order to produce a circularly polarized wave?
+      
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+    \end{enumerate}
+
+
+    \item \textbf{9.13 (40 points)} Find all elements of the Maxwell stress tensor for a monochromatic plane wave traveling in the 
+    $z$ direction and linearly polarized in the $x$ direction (Eq. $9.48$). Does your answer make sense? (Remember that 
+    $-\overleftrightarrow{T}$ represents the momentum flux density.) How is the momentum flux density related to the energy
+    density, in this case?
+
+      % \textcolor{hwColor}{
+      %   \\
+      % }
+
+
+    \item \textbf{9.14 (30 points)} Calculate the exact reflection and transmission coefficients, without assuming $\mu_1=\mu_2=\mu_0$. 
+    Confirm that $R+T=1$.
+
+      % \textcolor{hwColor}{
+      %   \\
+      % }
+
+
+    \item \textbf{9.7 (10 points)} Suppose string $2$ is embedded in a viscous medium (such as molasses), which imposes a drag force 
+    that is proportional to its (transverse) speed:
+    $$
+      \Delta F_{drag}=-\gamma \dfrac{\partial f}{\partial t} ~ \Delta z
+    $$
+    \begin{enumerate}
+      \item Derive the modified wave equation describing the motion of the string.
+
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+      \item Solve this equation, assuming the string vibrates at the incident frequency $\omega$. That is, look for solutions of the
+      form $\tilde{f}(z,t)=e^{i \omega t} ~ \tilde{F}(z)$.
+
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+      \item Show that the waves are \textbf{attenuated} (that is, their amplitude decreases with increasing $z$). Find the characteristic penetration distance, at which the amplitude
+      is $1/e$ of its original value, in terms of $\gamma$ , $T$, $\mu$, and $\omega$.
+
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+      \item If a wave of amplitude $A_I$ , phase $\delta_I=0$, and frequency $\omega$ is incident from the left (string 1), find the reflected wave’s
+      amplitude and phase.
+
+        % \textcolor{hwColor}{
+        %   \\
+        % }
+
+    \end{enumerate}
+
+
   \end{enumerate}
 
 \end{document}
