--- a/homework3.tex
+++ b/homework3.tex
@@ -223,7 +223,10 @@
           \\
           \\
           \\
-          T_{xx}=\epsilon_0 \left(E_0 ~ E_0 -\dfrac{1}{2} ~ E_0^2 \right)
+          T_{xx}=\epsilon_0 \left(E_x ~ E_x -\dfrac{1}{2} \delta_{xx} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_x ~ B_x -\dfrac{1}{2} \delta_{xx} B^2 \right)
+          \\
+          =\epsilon_0 \left(E_0 ~ E_0 -\dfrac{1}{2} ~ E_0^2 \right)
           +\dfrac{1}{\mu_0} \left(0 -\dfrac{1}{2} \left(\dfrac{1}{c} E_0\right)^2 \right)
           =\epsilon_0 \left(E_0^2 -\dfrac{1}{2} ~ E_0^2 \right)
           +\dfrac{1}{\mu_0} \left(-\dfrac{1}{2c^2} E_0^2 \right)
@@ -244,51 +247,118 @@
           \\
           \\
           \\
-          T_{xy}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{xy}=\epsilon_0 \left(E_x ~ E_y -\dfrac{1}{2} \delta_{xy} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_x ~ B_y -\dfrac{1}{2} \delta_{xy} B^2 \right)
+          \\
+          =\epsilon_0 \left(E_0 \times 0 -\dfrac{1}{2} \times 0 \times ~ E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(0 \times \dfrac{1}{c}E_0 -\dfrac{1}{2} \times 0 \times \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{xy}=0} ~~~~ \checkmark
           \\
           \\
           \\
           \\
-          T_{xz}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{xz}=\epsilon_0 \left(E_x ~ E_z -\dfrac{1}{2} \delta_{xz} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_x ~ B_z -\dfrac{1}{2} \delta_{xz} B^2 \right)
+          \\
+          =\epsilon_0 \left(E_0 \times 0 -\dfrac{1}{2} \times 0 \times E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(0 \times 0 -\dfrac{1}{2} \times 0 \times \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{xz}=0} ~~~~ \checkmark
           \\
           \\
           \\
           \\
-          T_{yx}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{yx}=\epsilon_0 \left(E_y ~ E_x -\dfrac{1}{2} \delta_{yx} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_y ~ B_x -\dfrac{1}{2} \delta_{yx} B^2 \right)
+          \\
+          =\epsilon_0 \left(0 \times E_0 -\dfrac{1}{2} \times 0 \times ~ E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(\dfrac{1}{c}E_0 \times 0 -\dfrac{1}{2} \times 0 \times \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{yx}=0} ~~~~ \checkmark
           \\
           \\
           \\
           \\
-          T_{yy}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{yy}=\epsilon_0 \left(E_y ~ E_y -\dfrac{1}{2} \delta_{yy} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_y ~ B_y -\dfrac{1}{2} \delta_{yy} B^2 \right)
+          \\
+          =\epsilon_0 \left(0 \times 0 -\dfrac{1}{2} ~ E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(\left(\dfrac{1}{c}E_0\right)^2 -\dfrac{1}{2} \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          =-\dfrac{1}{2} \epsilon_0 ~ E_0^2+\dfrac{1}{\mu_0} \dfrac{1}{2} \dfrac{E_0^2}{c^2}
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{yy}=0} ~~~~ \checkmark
+          \\
+          \\
+          \\
+          T_{yz}=\epsilon_0 \left(E_y ~ E_z -\dfrac{1}{2} \delta_{yz} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_y ~ B_z -\dfrac{1}{2} \delta_{yz} B^2 \right)
+          \\
+          =\epsilon_0 \left(0 \times 0 -\dfrac{1}{2} \times 0 \times ~ E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(\dfrac{1}{c}E_0 \times 0 -\dfrac{1}{2} \times 0 \times \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{yz}=0} ~~~~ \checkmark
           \\
           \\
           \\
           \\
-          T_{yz}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{zx}=\epsilon_0 \left(E_z ~ E_x -\dfrac{1}{2} \delta_{zx} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_z ~ B_x -\dfrac{1}{2} \delta_{zx} B^2 \right)
+          \\
+          =\epsilon_0 \left(0 \times E_0 -\dfrac{1}{2} \times 0 \times ~ E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(0 \times 0 -\dfrac{1}{2} \times 0 \times \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{zx}=0} ~~~~ \checkmark
           \\
           \\
           \\
           \\
-          T_{zx}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{zy}=\epsilon_0 \left(E_z ~ E_y -\dfrac{1}{2} \delta_{zy} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_z ~ B_y -\dfrac{1}{2} \delta_{zy} B^2 \right)
+          \\
+          =\epsilon_0 \left(0 \times 0 -\dfrac{1}{2} \times 0 \times ~ E_0^2 \right)
+          +\dfrac{1}{\mu_0} \left(0 \times \dfrac{1}{c}E_0 -\dfrac{1}{2} \times 0 \times \left(\dfrac{1}{c}E_0\right)^2 \right)
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T_{zy}=0} ~~~~ \checkmark
           \\
           \\
           \\
           \\
-          T_{zy}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          T_{zz}=\epsilon_0 \left(E_z ~ E_z -\dfrac{1}{2} \delta_{zz} ~ E^2 \right)
+          +\dfrac{1}{\mu_0} \left(B_z ~ B_z -\dfrac{1}{2} \delta_{zz} B^2 \right)
+          \\
+          =\epsilon_0 \left(0 \times 0 -\dfrac{1}{2} ~ \left(E_0 ~ cos(kz-\omega t+\delta)\right)^2 \right)
+          +\dfrac{1}{\mu_0} \left(0 \times 0 -\dfrac{1}{2} \left(\dfrac{1}{c} E_0 ~ cos(kz-\omega t+\delta) \right)^2 \right)
+          \\
+          =-\dfrac{1}{2} \epsilon_0 ~ E_0^2 ~ cos^2(kz-\omega t+\delta)-\dfrac{1}{2} \dfrac{1}{\mu_0 ~ c^2} E_0^2 ~ cos^2(kz-\omega t+\delta)
+          \\
+          =-\dfrac{1}{2} ~ \epsilon_0 ~ E_0^2 ~ cos^2(kz-\omega t+\delta)-\dfrac{1}{2} ~ \epsilon_0 ~ E_0^2 ~ cos^2(kz-\omega t+\delta)
           \\
           \\
           \\
+          \therefore ~~~ \boxed{T_{zz}=-\epsilon_0 ~ E_0^2 ~ cos^2(kz-\omega t+\delta)} ~~~~ \checkmark
           \\
-          T_{zz}=\epsilon_0 \left(E_i ~ E_j -\dfrac{1}{2} \delta_{ij} ~ E^2 \right)
-          +\dfrac{1}{\mu_0} \left(B_i ~ B_j -\dfrac{1}{2} \delta_{ij} B^2 \right)
+          \\
         $
+        All elements of the Maxwell stress tensor vanished except $T_{zz}$. Well, this justifies that the momentum of the fields points in the
+        Z-direction which makes sense. Also, we know that $E_0^2 ~ cos^2(kz-\omega t+\delta)=-T_{zz}$ is the momentum flux density
+        \\
+        The stress tensor can be considered as \emph{momentum flux density} tensor
       }
 
 
