--- a/homework3.tex
+++ b/homework3.tex
@@ -386,10 +386,84 @@
     \item \textbf{9.14 (30 points)} Calculate the exact reflection and transmission coefficients, without assuming $\mu_1=\mu_2=\mu_0$. 
     Confirm that $R+T=1$.
 
-      % \textcolor{hwColor}{
-      %   \\
-      % }
+      \textcolor{hwColor}{
+        \\
+        We should define two areas one on the left that contains the incident and reflected waves and one on the right contaning 
+        the transmitted wave. We can start with $R, ~ T,$ and $I$.
+        \\
+        \\
+        $
+          \begin{cases}
+            I=\dfrac{1}{2} \epsilon ~ v ~ E_0^2 ~~~~~~~~ \text{Intensity (average power per unit area)}
+            \\
+            \\
+            R \equiv \dfrac{I_R}{I_I} ~~~~~~~~~~~~~~ \text{Reflection coefficient}
+            \\
+            \\
+            T \equiv \dfrac{I_T}{I_I} ~~~~~~~~~~~~~~ \text{Transmission coefficient}
+          \end{cases}
+          \\
+          \\
+          \\
+          R=\dfrac{1}{2} \epsilon_1 ~ v_1 ~ E_{0R}^2 \times \left(\dfrac{1}{2} \epsilon_1 ~ v_1 ~ E_{0I}^2\right)^{-1}=\dfrac{E_{0R}^2}{E_{0I}^2}
+        $
+        On page $404$ of the textbook, we learned the relation between reflected and incident waves plus $\beta$.
+        \\
+        \\
+        \\
+        $
+          \dfrac{\tilde{E}_{0R}}{\tilde{E}_{0I}}=\dfrac{1-\beta}{1+\beta}, ~~~~~~~~~~~ \beta \equiv \dfrac{\mu_1 ~ v_1}{\mu_2 ~ v_2}=\dfrac{\mu_1 ~ n_2}{\mu_2 ~ n_1}
+          \\
+          \\
+          \therefore ~~~ \dfrac{E_{0R}^2}{E_{0I}^2}=\left(\dfrac{1-\beta}{1+\beta}\right)^2
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{R=\dfrac{E_{0R}^2}{E_{0I}^2}=\left(\dfrac{1-\beta}{1+\beta}\right)^2} ~~~~ \checkmark
+          \\
+          \\
+          \\
+          T=\dfrac{1}{2} \epsilon_2 ~ v_2 ~ E_{0T}^2 \times \left(\dfrac{1}{2} \epsilon_1 ~ v_1 ~ E_{0I}^2\right)^{-1}
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{T=\dfrac{\epsilon_2 ~ v_2}{\epsilon_1 ~ v_1} \dfrac{E_{0T}^2}{E_{0I}^2}} ~~~~ \checkmark
+          \\
+          \\
+          \\
+          \\
+        $
+        By using equation $9.82$ we have.
+        \\
+        \\
+        $
+          \left(\dfrac{\tilde{E}_{0T}}{\tilde{E}_{0I}}\right)^2=\left(\dfrac{2}{1+\beta}\right)^2=\left(\dfrac{E_{0T}}{E_{0I}}\right)^2 ~~~~ \checkmark
+        $
+        \\
+        \\
+        Let's rewrite $T$ in terms of $\beta$ now.
+        \\
+        \\
+        $
+          T=\dfrac{\epsilon_2 ~ v_2}{\epsilon_1 ~ v_1} \dfrac{E_{0T}^2}{E_{0I}^2}=\beta ~ \left(\dfrac{2}{1+\beta}\right)^2 ~~~~ \checkmark
+          \\
+          \\
+          \\
+          R+T=\left(\dfrac{1-\beta}{1+\beta}\right)^2 + \beta ~ \left(\dfrac{2}{1+\beta}\right)^2
+          =\dfrac{1+\beta^2-2\beta}{\left(1+\beta\right)^2}+\dfrac{4\beta}{\left(1+\beta\right)^2}
+          \\
+          =\dfrac{1+\beta^2-2\beta+4\beta}{\left(1+\beta\right)^2}=\dfrac{1+\beta^2+2\beta}{\left(1+\beta\right)^2}
+          =\dfrac{\left(1+\beta\right)^2}{\left(1+\beta\right)^2}
+          \\
+          \\
+          \\
+          \therefore ~~~ \boxed{R+T=1} ~~~~ \checkmark
+          \\
+          \\
+        $
+      }
 
+    \pagebreak
 
     \item \textbf{9.7 (10 points)} Suppose string $2$ is embedded in a viscous medium (such as molasses), which imposes a drag force 
     that is proportional to its (transverse) speed:
